--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+#container {
+  margin: 20px;
+  font-size: 16px;
+  position: relative;
+}
+
+#container::before {
+  content: "This is before content - ";
+  color: #f00;
+  font-size: 20px;
+}
+
+#container::after {
+  content: " - This is after content";
+  color: #f00;
+  font-size: 20px;
+}
